--- a/client/src/app/product/product.component.html
+++ b/client/src/app/product/product.component.html
@@ -18,7 +18,8 @@
     </fieldset>
 
     <fieldset class="form-group">
-        <input formControlName="quantity" placeholder="quantity" class="form-control form-control-lg" type="text" />
+        <input formControlName="availableInventory" placeholder="availableInventory"
+            class="form-control form-control-lg" type="text" />
     </fieldset>
 
 
